[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/Bubble.gd" type="Script" id=1]
[ext_resource path="res://assets/art/misc/orb_boundary.png" type="Texture" id=2]
[ext_resource path="res://assets/art/misc/orb_anim_strip_6.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/sfx/orb_hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/jdwasabi.itch.io:8-bit-16-bit-sound-effects-pack/Bubble 1.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0263

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 2.23607

[node name="Bubble" type="Node2D"]
position = Vector2( -8, 0 )
script = ExtResource( 1 )

[node name="BubbleShape" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubbleShape"]
shape = SubResource( 1 )

[node name="OrbBoundary" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
texture = ExtResource( 2 )

[node name="Orb" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="OrbSprite" type="AnimatedSprite" parent="Orb"]
frames = SubResource( 8 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orb"]
shape = SubResource( 9 )

[node name="Label" type="Label" parent="Orb"]
margin_right = 40.0
margin_bottom = 14.0

[node name="OrbHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BubbleEntry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
